# quant-challenge

./: .gitignore  LICENSE  README.md
python/: README.md  pyproject.toml
python/src/: .gitignore  main.py
python/src/application/: contracts.py
python/src/infrastructure/: __init__.py
python/src/infrastructure/adapters/: bybit.py
rust/: Cargo.toml  README.md  main.rs
rust/data/: deltas.json  snapshots.json
rust/logs/: quant_research.log.2025-07-09
rust/reports/: backtest.md  latest.md
rust/src/: config.rs  main.rs
rust/src/application/: mod.rs  orderbook_analyzer.rs
rust/src/application/reporting/: mod.rs  report.rs  saver.rs
rust/src/domain/: backtest.rs  mod.rs
rust/src/infrastructure/: mod.rs
rust/src/infrastructure/adapters/: bybit.rs  mod.rs
