[package]
name = "quant-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "tls"] }
tracing = "0.1"
diesel = { version = "2", optional = true }
tonic = { version = "0.11", optional = true }
entrait = { version = "0.6", optional = true }
esrs = { version = "0.3", optional = true }

[features]
default = []
