[package]
name = "quant-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
async-trait = "0.1"
anyhow = "1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-appender = "0.2.3"
serde_json = "1.0.140"

[features]
default = []
